2016-05-27  Niels Grewe <niels.grewe@halbordnung.de>

  * Tools/AGSParser.m: Ignore __asm__ directives 
	
2016-05-19 Seong Gu Lee <sgleehd@gmail.com>

	* GNUmakefile:
	* Source/Additions/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	mingw64 tweaks

2016-05-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPredicate.m: attempt fix for bug #47619

2016-05-18  Eric Heintzmann <heintzmann.eric@free.fr>

	* ChangeLog.2:
	* Documentation/news.texi:
	* Headers/Foundation/NSAutoreleasePool.h:
	* NEWS:
	* Source/GSSocksParser/GSSocksParser.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSConnection.m:
	* Source/NSKeyedUnarchiver.m:
	* Tools/AGSParser.m:
	Fix typos andss spelling erros, including the setPoolCountThreshold:
	method.

2016-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/manual/manual.texi:
	* Source/GSSocksParser/GSSocks4Parser.m:
	* Source/GSSocksParser/GSSocks5Parser.m:
	* Tools/pldes.1:
	Trivial fixes based on debian package.

2016-05-14  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/config.h.in:
        * Source/NSException.m:
        * configure.ac:
        * configure:
	Make USE_BFD control usage of libbfd and replace runtime warning with
	a configure time warning about the license issue.

2016-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSNotification.h:
	* Headers/Foundation/NSZone.h:
	* Headers/GNUstepBase/GSConfig.h.in:
	* Source/GSQuickSort.m:
	* Source/GSString.m:
	* Source/GSTimSort.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSConcretePointerFunctions.h:
	* Source/NSGarbageCollector.m:
	* Source/NSNotificationCenter.m:
	* Source/NSObject.m:
	* Source/NSThread.m:
	* Source/NSZone.m:
	Completed(?) removal of GC support.
	Plus various minor reorganisations to avoid compiler warnings.

2016-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: